--- a/index.htm
+++ b/index.htm
@@ -24,12 +24,12 @@ h4 { margin-bottom:4px; margin-top:12px; }
 </head>
 <body>
 
-<script type="module">
-import { exportCharacters, importCharacters } from './storage.js';
-</script>
-
 <div id="root"></div>
+
 <script type="text/babel">
+
+import { rollD20, processSkillRoll, rollAttribute } from './dice.js';
+import { exportCharacters, importCharacters } from './storage.js';
 
 const { useState, useEffect } = React;
 const ATTRS = ["MU","KL","IN","CH","FF","GE","KO","KK"];
@@ -91,58 +91,30 @@ function App() {
     saveChars(updated);
   }
 
-  function rollD20(){ return Math.floor(Math.random()*20)+1; }
-  function qualityLevel(tap){ if(tap<1)return 0; if(tap<=3)return 1; if(tap<=6)return 2; if(tap<=9)return 3; if(tap<=12)return 4; if(tap<=15)return 5; return 6; }
   function addToLog(entry){ setLog(prev=>[entry,...prev]); }
-
-  function processRoll(skill,useSpec,rolls){
-    const attrs = characters[currentChar]?.attributes || {};
-    const ones = rolls.filter(r=>r===1).length;
-    const twenties = rolls.filter(r=>r===20).length;
-    let isCritical=false, criticalText="";
-    if(ones>=2){ isCritical=true; criticalText="✅ Kritischer Erfolg"; }
-    if(twenties>=2){ isCritical=true; criticalText="❌ Kritischer Patzer"; }
-
-    let taw = skill.value + (useSpec && skill.spec?2:0);
-    let success=true;
-    const rollDetails=[];
-    skill.attr.forEach((a,i)=>{
-      const roll = rolls[i]!==undefined ? rolls[i] : rolls[0];
-      const val = attrs[a]||0;
-      const diff = roll - val;
-      if(diff>0) taw-=diff;
-      if(taw<0) success=false;
-      rollDetails.push(`${a}: geworfen ${roll} vs benötigt ${val} → ${diff<=0?"✔":"✘"}`);
-    });
-    let tap = success?taw:-1;
-    let qs = success?qualityLevel(tap):0;
-
-    addToLog({
-      skill: skill.name+(useSpec&&skill.spec?" (Spez)":"")+" ["+skill.category+"]",
-      rolls: rolls,
-      result: isCritical?criticalText:(success?`✅ Erfolg (TaP: ${tap}, QS: ${qs})`:`❌ Misslungen (TaP: ${tap})`),
-      details: rollDetails
-    });
-  }
 
   function rollSkill(skill,useSpec){
     const numDice = singleRollCategories.includes(skill.category)?1:skill.attr.length;
     const rolls = Array.from({length:numDice},()=>rollD20());
     setDiceResults(rolls.slice());
-    processRoll(skill,useSpec,rolls);
+    const result = processSkillRoll(skill, characters[currentChar].attributes, useSpec, rolls, singleRollCategories);
+    addToLog({
+      skill: skill.name + (useSpec && skill.spec ? " (Spez)" : "") + " [" + skill.category + "]",
+      rolls,
+      result: result.isCritical ? result.criticalText : result.success ? `✅ Erfolg (TaP: ${result.tap}, QS: ${result.qs})` : `❌ Misslungen (TaP: ${result.tap})`,
+      details: result.details
+    });
   }
 
-  function rollAttribute(attr){
+  function rollAttributeDice(attr){
     const val = characters[currentChar]?.attributes[attr] || 0;
-    const roll = rollD20();
-    const success = roll <= val;
-    const critical = roll===1 ? "✅ Kritischer Erfolg" : roll===20 ? "❌ Kritischer Patzer" : null;
-    setDiceResults([roll]);
+    const result = rollAttribute(val);
+    setDiceResults([result.roll]);
     addToLog({
       skill: `Eigenschaft: ${attr}`,
-      rolls: [roll],
-      result: critical || (success?`✅ Erfolg (≤ ${val})`:`❌ Misslungen (≤ ${val})`),
-      details: [`geworfen ${roll} vs benötigt ${val} → ${success?"✔":"✘"}`]
+      rolls: [result.roll],
+      result: result.critical || (result.success ? `✅ Erfolg (≤ ${val})` : `❌ Misslungen (≤ ${val})`),
+      details: result.details
     });
   }
 
@@ -159,6 +131,18 @@ function App() {
       <div className="controls">
         <button onClick={newCharacter}>+ Neu</button>
         <button onClick={deleteCharacter}>Löschen</button>
+        {Object.keys(characters).length > 1 && (
+          <select
+            value={currentChar}
+            onChange={e=>{
+              const selected = e.target.value;
+              setCurrentChar(selected);
+              setSkills(characters[selected].skills || []);
+            }}
+          >
+            {Object.keys(characters).map(name=><option key={name} value={name}>{name}</option>)}
+          </select>
+        )}
       </div>
 
       <div className="tabs">
@@ -172,7 +156,7 @@ function App() {
           {ATTRS.map(a=>(
             <div key={a}>
               {a}: <input type="number" value={characters[currentChar].attributes[a]||0} onChange={e=>updateAttr(a,e.target.value)} style={{width:60}} />
-              <button onClick={()=>rollAttribute(a)}>Würfeln</button>
+              <button onClick={()=>rollAttributeDice(a)}>Würfeln</button>
             </div>
           ))}
           <h4>Letzter Würfelwurf:</h4>
@@ -242,6 +226,7 @@ function App() {
           localStorage.setItem("dsa_characters", JSON.stringify(data));
         });
       }} />
+
     </div>
   );
 }
